# embarcatech_repository

./: .gitignore  README.md
projetos/apendice/blink/: CMakeLists.txt  blink.md  documentacao.md  main.c
projetos/u4c1e1/: CMakeLists.txt  main.c
projetos/u4c2e1/: documentacao.md  main.c
projetos/u4c2e2/: documentacao.md  main.c
projetos/u4c2e3/: documentacao.md  exemplo3.md  main.c
tutoriais/: EmbarcaTech.md  Embarcados - Nova Raspberry Pi Pico W - Agora com WiFi (e Bluetooth).md  Embarcados - Raspberry Pi Pico W.md  Instituto Hardware Br.md  Introdução à programação do Raspberry Pi Pico.md  Maker Hero - Raspberry Pi Pico 2.md  Raspberry Pi Pico - Tutorials, Pinout, What You Need to Know (Updated).md  Raspberry Pi Pico SDK - Programação C and C++ - Pico W RP2040.md  Raspberry Pi Pico W Review - Built-in Wi-Fi Comes to Pico.md  Raspberry Pi Pico W send BME280 Sensor Data to Blynk 2.0.md  Raspberry Pi Pico W.md  Robocore - Programação da Raspberry Pi Pico com CircuitPython.md  Robocore - Raspberry Pi Pico HRaspberry Pi Pico H.md  links de video aula do raspberry pi pico.txt  texto.md
tutoriais/.obsidian/: workspace.json
unidade3/tarefa/: tarefa.c
unidade4/: Errata - Código de Exemplo 2 - Capítulo 2.txt  Errata - definição da configuração do PLL.txt  item 3.txt
unidade4/capitulo0/: anotacoes.md  documentacao.md
unidade4/capitulo1/: anotacoes.md  como_estruturar_arquivo_configuracao_cmake.md  como_instalar_cmake_linux_ubuntu.md  (+2 more)
unidade6/: descricao_problema_pratico.odt  descricao_software_embarcado.odt  solucao_iot_centrada_microcontroladores.odt
(+16 files in other folders)
